# voice-revenge-vizuara-ai

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: azure-deploy.yml
backend/: .env.example  COMMIT_PLAN.md  README.md  docker-compose.yml  requirements.txt
backend/docker/: .dockerignore  Dockerfile.construction  Dockerfile.stt  entrypoint.agent.sh  entrypoint.stt.sh
backend/examples/: receptionist_demo.py
backend/prisma/: schema.prisma
backend/scripts/: demo-outbound-call.py  deploy-construction.sh  deploy-infra.sh  get-recording.py  make_call.py  setup-demo-models.py  setup-local.sh  smoke_test.py
backend/tests/: test_receptionist_tools.py  test_runner.py  test_sentence_aggregator.py
docker/: Dockerfile.agent  Dockerfile.tts  Dockerfile.webrtc  entrypoint.agent.sh  entrypoint.tts.sh  entrypoint.webrtc.sh
docs/: INDEX.md  deepgram-integration.md  deployment-azure-construction.md
docs/adrs/: ADR-001-frontend-multitenant-education-crm.md  (+18 more)
examples/: construction_demo.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
landing/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
pronunciation_dicts/: 50_word_pronunciation_capture.md  suryapet_recording_script.md  suryapet_telugu_v1.json
scripts/: demo-outbound-call.py  deploy-k8s.sh  pilot_healthcare_mvp.py  run_healthcare_voicelive.py  verify-twilio.py
src/api/: main.py  (+11 more)
tests/: test_moonshine_engine.py  test_scheduler.py  test_webrtc_routes.py
(+308 files in other folders)
